Changed the default scrollbar to a custom color srcollbar and fixed the height and width for the responsive image

--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
+
+/* Scrollbar is changed with the whole HTML Page*/
+html::-webkit-scrollbar {
+  width: 15px; 
+}
+/*Changes the background of the scrollbar */
+html::-webkit-scrollbar-track {
+background-color: rgb(44, 75, 54);
+}
+/*Changes the scrollbar color*/
+html::-webkit-scrollbar-thumb {
+background: #c2cbd1;
+border-radius: 25px;
+}
+
+/* Element Selectors */
 body {
     width: 100% ;
     background: black;
     justify-content: center;
     align-content: center;
     height: auto;
+    
   }
   
-  .image-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
   h1 {
     margin-top: 0px;
     margin-bottom: 10px;
@@ -38,6 +49,7 @@ body {
     text-align: center;
   }
 
+/*ID Selectors*/
   #new-music-text {
     font-size: 3.5em;
   }
@@ -46,6 +58,29 @@ body {
     width: 200px;
     margin: 50px;
     border-radius: 50%;
+  }
+
+  #searchbartext {
+    color: white;
+  }
+
+  #top-tracks-btn {
+    font-size: 21px;
+  } 
+
+  #artistImg {
+    min-height: 400px;
+    max-height: 400px;
+    min-width: auto;
+    max-width: auto;
+    display: flex; 
+  }
+
+/*Class Selectors*/
+  .image-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .header {
@@ -62,10 +97,6 @@ body {
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-  }
-
-  #searchbartext {
-    color: white;
   }
   
   .header-dark {
@@ -98,17 +129,13 @@ body {
     overflow: hidden;
     background: linear-gradient(to right, rgb(163, 177, 35) 20%, rgb(123, 37, 131) 40%, #60d1b9 50%, #94c917 55%, rgb(185, 110, 24) 70%, rgb(16, 145, 65) 100%);
     background-size: 200% auto;
-     animation: shine 3s linear infinite;
+    animation: shine 3s linear infinite;
   }
   
   .textboxId {
     height: 45px;
     font-size: 24px;
     text-align: center;
-  } 
-
-  #top-tracks-btn {
-    font-size: 21px;
   } 
 
   /*Begin shimmer code*/
@@ -160,6 +187,13 @@ body {
       }
     }
    
+    @media screen and (max-width: 375px) {
+      .container {
+        height: 1300px;
+      }
+      
+    }
+
     }
     @media screen and (max-width: 320px) {
       h1 {
